@@ -1,6 +1,7 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+04/12/2016 12:56 - Added error message for uploading an avatar for registration
 04/12/2016 11:45 - Added default team name 'cyberbot' to admin view
 04/12/2016 11:37 - avatars will be renamed to == username, and success msg improved upon registration
 04/12/2016 11:03 - Removed unnecessary line from Registration controller
